# myfirstbot

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.stage.yml  docker-compose.yml  pyproject.toml  redis.conf
.github/workflows/: docker-image.yml
app/: config.py  exceptions.py  main.py
app/db/: __init__.py  db.py  exceptions.py  test.py
app/db/migrations/: env.py
app/db/models/: __init__.py  base.py  order.py  user.py
app/db/repositories/: __init__.py  abs_orm_repo.py  abs_repo.py  exc_mapper.py  order.py  user.py
app/db/schemas/: order.py  user.py
app/db/types/: access_level.py  order_status.py
app/entities/: order.py  user.py
app/entities/choices/: __init__.py  order_status.py
app/entities/query/: filters.py  pagination.py  result.py  search.py  sorting.py
app/repo/: order.py  user.py
app/services/: __init__.py  auth.py  order.py  user.py
app/tgbot/: __main__.py  callbacks.py  dispatcher.py  filters.py
buildfiles/: Dockerfile  redis.conf
deploy/pgadmin/: entrypoint.sh  servers.json.template
env/: .env.example
monitoring/: alert.rules.yml  docker-compose.yml  loki-config.yaml  loki-config.yml  prometheus.yml  promtail-config.yml
monitoring/grafana/: alert-rules.yaml  cadvisor-docker-containers-overview.json  contact-points.yaml  notification-policies.yaml
monitoring/loki/: config.yml
monitoring/promtail/: config.yml
myfirstbot/: config.py  definitions.py  exceptions.py  main.py
myfirstbot/base/: database.py
myfirstbot/entities/: order.py  user.py
myfirstbot/repo/: __init__.py  order.py  user.py
myfirstbot/repositories/: __init__.py
myfirstbot/services/: __init__.py  auth.py  my_orders.py  order.py  user.py
myfirstbot/tgbot/: buttons.py  callbacks.py  commands.py  definitions.py  dispatcher.py
src/: app.py  config.py  deps.py  main.py  paths.py
src/entities/: __init__.py  forms.py  order.py  passport.py  recognition.py  user.py  visa.py
src/migrations/: env.py
src/orm_models/: __init__.py  orm_app_form.py  orm_user.py
src/repo/: order_repo.py  user_repo.py
src/repositories/: __init__.py  app_form_repo.py  order_repo.py  user_repo.py  visa_repo.py
src/services/: __init__.py  attachment_service.py  auth.py  auth_service.py  form_service.py  order.py  order_service.py  user.py  user_service.py
src/settings/: __init__.py  app_settings.py  app_settings_base.py  log_settings.py  save_dotenv_example.py  tgbot_settings.py
src/tgbot/: callbacks.py  filters.py  setup.py  tgbot_app.py  tgbot_init.py  tgbot_settings.py
tests/: conftest.py
tests/integration/: conftest.py  test_stairway.py  test_user.py
tests/utils/: alembic.py  config.py  migrations.py  mocked_database.py
(+467 files in other folders)
